# parallel-programming-labs

./: .gitignore
lab1MPIBacisc/lab1TwoVectorsCommon/: CMakeLists.txt  Exceptions.h  LinearVector.h  main.cpp
lab1MPIBacisc/lab1TwoVectorsScatRedBcast/: CMakeLists.txt  main.cpp
lab1MPIBacisc/lab1TwoVectorsSendAndRec/: CMakeLists.txt  exceptions.h  main.cpp
lab2MPILinearEquations/GenerateEquation/: CMakeLists.txt  main.cpp  matrix_generation.cpp  matrix_generation.h
lab2MPILinearEquations/MPI/: CMakeLists.txt  class_mpi_matrix.cpp  class_mpi_matrix.h  class_mpi_options.cpp  main.cpp  sofe_algorithm_mpi_solution.cpp  sofe_algorithm_mpi_solution.h
lab2MPILinearEquations/noMPI/: 3  (+6 more)
lab5GameOfLife/: CMakeLists.txt  class_cell.h  class_game_controller.cpp  class_game_controller.h  class_universe.cpp  class_universe.h  constants.h  main.cpp
lab5GameOfLife/MPI/: CMakeLists.txt
lab5GameOfLife/MPI/src/: constants.h  main.cpp
lab5GameOfLife/MPI/src/exception/: game_exception.cpp  game_exception.h  not_comparable_exception.cpp
lab5GameOfLife/MPI/src/game-controller/: launch_game_controller.cpp  launch_game_controller.h
lab5GameOfLife/MPI/src/game-model/: game_of_life.cpp  game_of_life.h
lab5GameOfLife/MPI/src/game-object/: cell.h  game_field.cpp  game_field.h
lab5GameOfLife/lab5GameOfLifeParallel/: CMakeLists.txt  class_cell.h  class_game_controller.h  class_game_data_scheduler.h  class_game_of_life.cpp  class_game_of_life.h  class_universe.cpp  class_universe.h  constants.h
lab6POSIXThread/: CMakeLists.txt  constants.h  global_storage.cpp  global_storage.h  main.cpp  pthread_model.cpp  pthread_model.h
(+29 files in other folders)
